--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@
     --p-size: 18px;
     --p-weight: 500;
 
-    --hero-bg-color: #cacaca33;
+    --hero-bg-color: #dadada33;
     --hero-border: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='480' ry='480' stroke='%2333333355' stroke-width='2' stroke-dasharray='16' stroke-dashoffset='0' stroke-linecap='round'/%3e%3c/svg%3e");
 
     --skill-bg-color: #fff;
@@ -84,10 +84,11 @@ p {
     margin-left: auto;
     padding: 0;
     overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .nav-menu li {
-    float: left;
     margin-left: 40px;
 }
 
@@ -126,13 +127,95 @@ p {
     display: inline-block;
 }
 
+.nav-line {
+    display: none;
+}
+
+.theme-switch {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.theme-text {
+    margin-left: 8px;
+    font-size: 16px;
+    color: var(--primary-color);
+}
+
+.nav-item-mobile {
+    display: none;
+}
+
+.icon-menu {
+    --gap: 5px;
+    --height-bar: 2.5px;
+    --pos-y-bar-one: 0;
+    --pos-y-bar-three: 0;
+    --scale-bar: 1;
+    --rotate-bar-one: 0;
+    --rotate-bar-three: 0;
+    width: 25px;
+    display: none;
+    flex-direction: column;
+    gap: var(--gap);
+    cursor: pointer;
+    position: relative;
+    margin-left: auto;
+    /* Add this line to push the icon to the right */
+}
+
+.bar {
+    position: relative;
+    height: var(--height-bar);
+    width: 100%;
+    border-radius: .5rem;
+    background-color: var(--primary-color);
+}
+
+.bar--1 {
+    top: var(--pos-y-bar-one);
+    transform: rotate(var(--rotate-bar-one));
+    transition: top 100ms 50ms, transform 100ms;
+}
+
+.bar--2 {
+    transform: scaleX(var(--scale-bar));
+    transition: transform 75ms 50ms;
+}
+
+.bar--3 {
+    bottom: var(--pos-y-bar-three);
+    transform: rotate(var(--rotate-bar-three));
+    transition: bottom 100ms 50ms, transform 100ms;
+}
+
+.check-icon:checked+.icon-menu>.bar--1 {
+    transition: top 100ms, transform 100ms 50ms;
+}
+
+.check-icon:checked+.icon-menu>.bar--3 {
+    transition: bottom 100ms, transform 100ms 50ms;
+}
+
+.check-icon:checked+.icon-menu {
+    --pos-y-bar-one: calc(var(--gap) + var(--height-bar));
+    --pos-y-bar-three: calc(var(--gap) + var(--height-bar));
+    --scale-bar: 0;
+    --rotate-bar-one: 45deg;
+    --rotate-bar-three: -45deg;
+}
+
+
+
+
 
 /* Container */
 .container {
     padding: 0px 100px;
     display: flex;
     flex-direction: column;
-    gap: 200px;
+    gap: 240px;
 }
 
 /* Hero */
@@ -141,7 +224,7 @@ p {
     justify-content: center;
     align-items: center;
     gap: 120px;
-    margin-top: 160px;
+    margin-top: 180px;
 }
 
 .hero .image-profile {
@@ -231,6 +314,40 @@ p {
     text-decoration-color: var(--highlight-color);
 }
 
+.scroll-invite {
+    position: absolute;
+    display: flex;
+    gap: 8px;
+    bottom: 36px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    opacity: 1;
+    transition: opacity 0.25s ease-in-out;
+}
+
+.scroll-invite.fade-out {
+    opacity: 0;
+}
+
+.scroll-invite p {
+    color: var(--highlight-color);
+    opacity: 0.4;
+    animation: moveUpDown 2s ease-in-out infinite;
+}
+
+@keyframes moveUpDown {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-12px);
+    }
+}
+
 
 
 /* About me */
@@ -251,14 +368,10 @@ p {
     letter-spacing: 0.4px;
 }
 
-.about-me b {
-    font-weight: 500;
-}
-
 .about-me .edu-box {
     margin-top: 100px;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 72px;
 }
 
@@ -305,10 +418,9 @@ p {
 
 .my-skills .skills-box {
     margin-top: 40px;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
     gap: 72px;
-    flex-wrap: wrap;
 }
 
 .skills-box .item {
@@ -359,6 +471,7 @@ p {
     margin-top: 40px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 72px;
 }
 
@@ -367,7 +480,6 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 
 .item .contact-img {
