--- a/public/style.css
+++ b/public/style.css
@@ -421,8 +421,9 @@ p {
 
 .my-skills .skills-box {
     margin-top: 40px;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     gap: 72px;
 }
 
@@ -462,6 +463,136 @@ p {
     font-weight: 700;
     font-size: 16px;
     line-height: normal;
+}
+
+/* Experiences */
+.experiences {
+    text-align: center;
+    padding: 0px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    & p {
+        display: none;
+        margin-top: 6px;
+        font-weight: 300;
+        opacity: 0.8;
+    }
+}
+.exp-box {
+    margin-top: 40px;
+    gap: 48px;
+    display: flex;
+    justify-self: start;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.exp-box .item {
+    width: 360px;
+    height: 240px;
+    border-radius: 16px;
+    position: relative;
+    overflow: hidden;
+}
+
+.exp-box .item .black-filter {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 16px;
+    z-index: 1;
+}
+
+.exp-box .item .shadow {
+    position: absolute;
+    width: 360px;
+    height: 100px;
+    bottom: 0;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+    border-radius: 0 0 16px 16px;
+    z-index: 2;
+}
+
+.exp-box .item .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: start;
+    color: white;
+    text-align: center;
+    line-height: 32px;
+    padding: 28px;
+    z-index: 3;
+    text-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+
+    & h2 {
+        font-size: 36px;
+        font-weight: 500;
+        color: #fff;
+    }
+
+    & h4 {
+        font-size: 20px;
+        font-weight: 400;
+    }
+
+    & p {
+        display: none;
+        text-align: start;
+        margin-top: 8px;
+        font-size: 16px;
+        line-height: 22px;
+        font-weight: 300;
+        color: #f1f1f1;
+    }
+}
+
+.exp-box .item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: all 0.2s ease-in-out;
+}
+
+
+.exp-box .item:hover .black-filter {
+    background-color: rgba(0, 0, 0, 0.28);
+    border: solid 1px rgba(255, 255, 255, 0.48);
+}
+
+.exp-box .item:hover .content {
+
+    & h4 {
+        color: #5EE55E;
+    }
+
+    & p {
+        display: block;
+    }
+}
+
+.exp-box .item:hover img {
+    filter: blur(12px)
+}
+.see-more {
+    margin-top: 32px;
+    padding: 10px 28px;
+    font-size: 20px;
+    background-color: var(--highlight-color);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    display: none;
+}
+.see-more:hover {
+    filter: brightness(1.1);
 }
 
 /* Contact me */
