📚 docs(app): add new exp

--- a/public/style-mobile.css
+++ b/public/style-mobile.css
@@ -107,6 +107,9 @@
     }
 
     /* About me */
+    .about-me {
+        padding: 0px 20px;
+    }
     .about-me .paragraph {
         padding: 0px 6%;
     }
